--- a/README.org
+++ b/README.org
@@ -1,7 +1,123 @@
 * LAMMPS Mode
+  :PROPERTIES:
+  :CUSTOM_ID: gnu-emacs-syntax-highlighting
+  :END:
+  
+#+BEGIN_QUOTE
+  Copyright (C) 2010-2018 Aidan Thompson <athomps at sandia.gov>
+  Copyright (C) 2018 Rohit Goswami <r95g10 at gmail.com>
+#+END_QUOTE
+
 A major mode based off ~shell-script-mode~ for basic syntax highlighting of
 [[https://lammps.sandia.gov][lammps]] files.
 
 Updated and kept here for MELPA usage.
 A copy of the latest version is also available at the [[https://github.com/lammps/lammps][lammps github repo]], under
 the ~tool/emacs~ folder.
+
+** Table of Contents :TOC:
+- [[LAMMPS Mode][LAMMPS Mode]]
+  - [[Installation][Installation]]
+  - [[Status][Status]]
+  - [[Implementation Details][Implementation Details]]
+  - [[Caveats][Caveats]]
+  - [[License][License]]
+
+** Installation
+   :PROPERTIES:
+   :CUSTOM_ID: installation
+   :END:
+
+*Requirements: GNU Emacs 24.**
+
+*** Obtaining the Package
+    :PROPERTIES:
+    :CUSTOM_ID: obtaining-the-package
+    :END:
+
+**** MELPA
+     :PROPERTIES:
+     :CUSTOM_ID: melpa
+     :END:
+
+The easiest installation method is via MELPA and it is advisable to use
+one of the many [[https://melpa.org/#/getting-started][MELPA
+installation methods]].
+
+For example, with
+[[https://github.com/jwiegley/use-package][use-package]] one can simply
+use the following:
+
+#+BEGIN_SRC emacs-lisp
+    (use-package lammps-mode)
+#+END_SRC
+
+**** Manually
+     :PROPERTIES:
+     :CUSTOM_ID: manually
+     :END:
+
+Assuming for some reason you have downloaded the file to
+=~/.emacs.d/lisp= you would do the following (kanged
+[[http://ergoemacs.org/emacs/emacs_installing_packages.html][from
+here]]):
+
+#+BEGIN_SRC emacs-lisp
+    ;; Tell emacs where is your personal elisp lib dir
+    (add-to-list 'load-path "~/.emacs.d/lisp/")
+
+    ;; load the package.
+    (load "lammps-mode")
+#+END_SRC
+
+*** Autoloading & Auto-recognition
+    :PROPERTIES:
+    :CUSTOM_ID: autoloading-auto-recognition
+    :END:
+
+For autoloading and auto-recognizing =in.*= and =*.lmp= files add the
+following to =.emacs=:
+
+#+BEGIN_SRC emacs-lisp
+    (autoload 'lammps-mode "lammps-mode.el" "LAMMPS mode." t)
+    (setq auto-mode-alist (append auto-mode-alist
+                                  '(("in\\." . lammps-mode))
+                                  '(("\\.lmp\\'" . lammps-mode))
+                                  ))
+#+END_SRC
+
+** Status
+   :PROPERTIES:
+   :CUSTOM_ID: status
+   :END:
+
+By far not all commands are included in the syntax file
+(lammps-mode.el). You can easily add new ones to the existing classes.
+
+** Implementation Details
+   :PROPERTIES:
+   :CUSTOM_ID: implementation-details
+   :END:
+
+=lammps-mode= is derived from =shell-script-mode= which provides some
+basic syntax highlighting of strings, comments, etc.
+
+The MELPA recipe used for this package is simply:
+
+#+BEGIN_SRC emacs-lisp
+    (lammps-mode :fetcher github :repo "HaoZeke/lammps-mode")
+#+END_SRC
+
+** Caveats
+   :PROPERTIES:
+   :CUSTOM_ID: caveats
+   :END:
+
+- Does not work with Xemacs [See [[https://github.com/lammps/lammps/pull/1022#issuecomment-408871233][this comment]]]
+
+** License
+   :PROPERTIES:
+   :CUSTOM_ID: license
+   :END:
+
+[[https://github.com/HaoZeke/lammps-mode/blob/master/LICENSE][GNU GPL v2]]. Check the file for more details.
